@@ -2,6 +2,7 @@
 Version: 0.1.27
 Date: ????
   Changes:
+    - Reduce number of recipes created
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.26
 Date: 2024-01-23
